objects/NCS_Data_Entry_Staging_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>NCS Data Entry Staging Field (Mapping from)</description>
        <inlineHelpText>This is the API name of the field on the NCS Data Entry Staging Object ie; yp_first_name__c</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>Target field, this is the field the Source Field maps to on the related Salesforce object</description>
        <inlineHelpText>Target Field on Target Object, uses the Salesforce API name ie, firstName, ap_recieved__c</inlineHelpText>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <inlineHelpText>Salesforce Object API name ie, Contact, Inclusion_Details__c</inlineHelpText>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <inlineHelpText>Target type is used to specify the target object for use within the APEX classes bg_NCSDataEntry

ENSURE ALL CAPITALS

Values are;
INC
NCS
YPCON
PGCON
YP&amp;PGCON</inlineHelpText>
        <label>Target Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NCS Data Entry Staging Settings</label>
</CustomObject>